--- a/.github/workflows/submit.yml
+++ b/.github/workflows/submit.yml
@@ -39,6 +39,7 @@ jobs:
               --restart-policy Never \
               --assign-identity \
               --scope ${{ env.scope }} \
+              --role 'Storage Blob Data Owner' \
               --environment-variables MODEL_NAME=${{ env.model_name }} MODEL_ID=${{ env.MODEL_ID }} STORAGE_ACCOUNT_NAME=${{ env.storage_account_name }} \
               --secure-environment-variables NUMERAI_PUBLIC_ID=${{ env.NUMERAI_PUBLIC_ID }} NUMERAI_SECRET_KEY=${{ env.NUMERAI_SECRET_KEY }}
           env:
@@ -81,6 +82,7 @@ jobs:
               --restart-policy Never \
               --assign-identity \
               --scope ${{ env.scope }} \
+              --role 'Storage Blob Data Owner' \
               --environment-variables MODEL_NAME=${{ env.model_name }} MODEL_ID=${{ env.MODEL_ID }} NEUTRALIZE=0.3 STORAGE_ACCOUNT_NAME=${{ env.storage_account_name }} \
               --secure-environment-variables NUMERAI_PUBLIC_ID=${{ env.NUMERAI_PUBLIC_ID }} NUMERAI_SECRET_KEY=${{ env.NUMERAI_SECRET_KEY }}
           env:
@@ -123,6 +125,7 @@ jobs:
               --restart-policy Never \
               --assign-identity \
               --scope ${{ env.scope }} \
+              --role 'Storage Blob Data Owner' \
               --environment-variables MODEL_NAME=${{ env.model_name }} MODEL_ID=${{ env.MODEL_ID }} NEUTRALIZE=0.2 STORAGE_ACCOUNT_NAME=${{ env.storage_account_name }} \
               --secure-environment-variables NUMERAI_PUBLIC_ID=${{ env.NUMERAI_PUBLIC_ID }} NUMERAI_SECRET_KEY=${{ env.NUMERAI_SECRET_KEY }}
           env:
@@ -165,6 +168,7 @@ jobs:
               --restart-policy Never \
               --assign-identity \
               --scope ${{ env.scope }} \
+              --role 'Storage Blob Data Owner' \
               --environment-variables MODEL_NAME=${{ env.model_name }} MODEL_ID=${{ env.MODEL_ID }} NEUTRALIZE=0.3 STORAGE_ACCOUNT_NAME=${{ env.storage_account_name }} \
               --secure-environment-variables NUMERAI_PUBLIC_ID=${{ env.NUMERAI_PUBLIC_ID }} NUMERAI_SECRET_KEY=${{ env.NUMERAI_SECRET_KEY }}
           env:
@@ -207,6 +211,7 @@ jobs:
               --restart-policy Never \
               --assign-identity \
               --scope ${{ env.scope }} \
+              --role 'Storage Blob Data Owner' \
               --environment-variables MODEL_NAME=${{ env.model_name }} MODEL_ID=${{ env.MODEL_ID }} NEUTRALIZE=0.45 STORAGE_ACCOUNT_NAME=${{ env.storage_account_name }} \
               --secure-environment-variables NUMERAI_PUBLIC_ID=${{ env.NUMERAI_PUBLIC_ID }} NUMERAI_SECRET_KEY=${{ env.NUMERAI_SECRET_KEY }}
           env:
