--- a/.github/workflows/submit-xgb1.yml
+++ b/.github/workflows/submit-xgb1.yml
@@ -52,7 +52,7 @@ jobs:
 
         - name: Test 
           run: |
-            Result=$(az container show --resource-group ${{ env.resource_group }} --name ${{ env.model_name }} --query "instanceView.state" --output tsv)
+            Result=$(az container show --resource-group ${{ env.resource_group }} --name ${{ env.model_name }}-run-${{ github.run_id }} --query "instanceView.state" --output tsv)
             
             if $Result | grep -q 'Failed'; then
               exit 1
